syntax = "proto3";

option optimize_for = SPEED;
option cc_enable_arenas = true;
option cc_generic_services = true;

option go_package = "main";

message SampleNested {
	int64 nested_id = 1;
	string nested_name = 2;
	bytes nested_data = 3;
}

message SampleContainer {
	int32 id = 1;
	string title = 2;
	SampleNested nested = 3;
	repeated SampleNested nested_list = 4;
	map<string, SampleNested> nested_map = 5;
	bytes payload = 6;
	repeated string labels = 7;
	oneof optional_value {
		int32 opt_int = 8;
		SampleNested opt_nested = 9;
	}
}